style: fix wrong positioning

--- a/src/styles/Logo.css
+++ b/src/styles/Logo.css
@@ -1,6 +1,6 @@
 .logo-wrap {
     position: absolute;
-    left: 50.5%;
+    left: 50%;
     top: 5%;
     transform: translate(-50%, -50%);
     display: flex;
